[tool.poetry]
name = "reconstructor"
version = "1.2.0"
description = "COBRApy Compatible Genome Scale Metabolic Network Reconstruction Tool: Reconstructor"
authors = ["Matt Jenior and Emma Glass"]
license = "MIT"
readme = "README.md"
include = [
    "reconstructor/resources/*.gz",
    "reconstructor/resources/testfiles.zip"
]
exclude = [
    "reconstructor/resources/screened_kegg_prokaryotes_pep_db.dmnd",
    "reconstructor/bin/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
cobra = "^0.29.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=7.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.7,<0.15.0)"
]
